# rundeck-mcp-server-production

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  FINAL_SETUP_COMMANDS.sh  LICENSE  MANIFEST.in  MCP_TOOL_PROMPTS_REFERENCE.md  Makefile  NEW_REPO_SETUP.md  PERFORMANCE_OPTIMIZATION_REPORT.md  QUICK_START.md  README.md  SAMPLE_JOB.yaml  SECURITY.md  TROUBLESHOOTING.md  VARIABLE_RULES.md  git-setup-commands.sh  pyproject.toml  setup.sh  test_job_execution.py  tool_prompts.json
rundeck_mcp/: __init__.py  __main__.py  client.py  server.py  server_final.py  server_simple.py  server_working.py  utils.py
rundeck_mcp/models/: __init__.py  base.py  rundeck.py
rundeck_mcp/tools/: __init__.py  analytics.py  executions.py  jobs.py  nodes.py  projects.py  system.py
tests/: __init__.py  debug_jobs.py  get_claude_config.py  test_multi_server.py  test_server.py
tests/evals/: run_tests.py
